--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,7 @@ header{
 	font-size: 24px;
 	font-family: "Helvetica-Light";
 	font-weight: bold;
+	text-transform: uppercase;
 	color: #202124;
 	margin-bottom: 40px; 
 }
@@ -378,4 +379,115 @@ header{
 	display: flex;
     flex-direction: row;
     margin-top: 10px;
+}
+
+
+/*my footer*/
+.container2 {
+	max-width: 1098px;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #A6ADB4;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.my-page-footer{
+	background-color: #A6ADB4;
+	height: 200px;
+	margin-top: 100px;
+}
+.footer-right-components{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: row;
+	  width: 45%;
+    padding-top: 56px;
+}
+.footer-left-components{
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+	width: 50%;
+    padding-top: 56px;
+}
+
+.footer_logo{
+	display: flex;
+	justify-content: flex-start;
+}
+.footer-components{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	width: 283px;
+	cursor: pointer;
+	margin-left: 45px;
+}
+.list{
+	display: flex;
+	flex-direction: column;
+	font-size: 13px;
+	font-weight: bold;
+	color:#CBD0D3;
+	text-transform: capitalize;
+}
+.send-icon {
+	color: #Fff;
+	position: absolute;
+}
+.email-input img{
+	position: absolute;
+}
+#email{
+	background-color: #A6ADB4;
+	opacity: 20%;
+	border-radius: 6px;
+	border-color: #fff;
+	border:2px solid #fff;
+	height: 40px;
+	position: relative;
+	width: 263px;
+}
+
+.footer-text{
+	font-size: 11px;
+	color:  #fff;
+	margin-top: 16px;
+}
+::placeholder {
+	font-size: 13px;
+	color: #fff;
+	text-transform: capitalize;
+}
+.network-icon{
+	color: #fff;
+}
+.social-space{
+	width: 160px;
+    display: flex;
+    justify-content: space-between;
+
+}
+/*finished footer*/
+
+/*here starts second-page*/
+
+.world-news{
+	display: flex;
+	flex-wrap: wrap;
+}
+.second_page-bg-img{
+	background-image: url("../image/desert.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	position: relative;
+	display: flex;
+	justify-content: flex-start;
+/*	float: left;*/
+	height: 600px;
+	width:60%;
 }
