--- a/css/style.css
+++ b/css/style.css
@@ -700,9 +700,15 @@ label{
 	flex-direction: row;
 	justify-content: space-between;
 }
+.letters{
+	width: 70%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
 .first-info{
 	margin-top: 40px;
-	width: 31%;
+	width: 25%;
 }
 .first-info h5{
 	color:#202124;
@@ -714,7 +720,7 @@ label{
 	margin-top: 40px;
 	font-size: 14px;
 	color: #A6ADB4;
-	width: 30%;
+	width: 45%;
 	line-height: 1.6;
 }
 
@@ -722,7 +728,7 @@ label{
 	margin-top: 40px;
 	font-size: 14px;
 	color: #A6ADB4;
-	width: 30%;
+	width: 45%;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
